package ar.edu.utn.frba.dds.domain.contacto;

public class WhatsApp implements MedioDeContacto {

  public String numero;

  @Override
  public void enviar(Mensaje mensaje) {
    //TODO:
  }
}
